--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <img class="img-flex" src="/image/IMAGE2.png" alt="">
     </div>
   </section>
-  <script src="/Js/main.js"></script>
+  <script src="./Js/main.js"></script>
 </body>
+
 </html>
